--- a/css/style.css
+++ b/css/style.css
@@ -759,6 +759,37 @@
   }
 }
 
+@media (max-height: 635px) {
+  .mobMenuList .mainMenu .pagesList {
+    margin-bottom: 20px;
+    font-size: 16px;
+    margin-top: 0;
+  }
+  .mobMenuList .mainMenu .toList {
+    font-size: 16px;
+  }
+  .mobMenuList .services .menuTitle {
+    margin-top: 0;
+  }
+  .mobMenuList .courses {
+    font-size: 16px;
+  }
+  .mobMenuList .courses .menuTitle {
+    margin-top: 0;
+    margin-bottom: 20px;
+    font-size: 20px;
+  }
+  .mobMenuList .navMenu .navList {
+    margin-top: 0;
+  }
+  .mobMenuList .navMenu .navList li:not(:last-child) {
+    margin-bottom: 3px;
+  }
+  .mobMenuList .navMenu .navList .hashtag-nav {
+    font-size: 16px;
+  }
+}
+
 @media (max-width: 992px) {
   .welcomePage .hashtag-title {
     margin-bottom: 10px;
@@ -3772,6 +3803,30 @@
   margin-bottom: 60px;
 }
 
+.reviews .videoList .video1 .preview {
+  background: url("../assets/video6.png") no-repeat center/100% auto #001E20;
+}
+
+.reviews .videoList .video2 .preview {
+  background: url("../assets/video5.png") no-repeat center/100% auto #001E20;
+}
+
+.reviews .videoList .video3 .preview {
+  background: url("../assets/video4.png") no-repeat center/100% auto #001E20;
+}
+
+.reviews .videoList .video4 .preview {
+  background: url("../assets/video3.png") no-repeat center/100% auto #001E20;
+}
+
+.reviews .videoList .video5 .preview {
+  background: url("../assets/video1.png") no-repeat center/100% auto #001E20;
+}
+
+.reviews .videoList .video6 .preview {
+  background: url("../assets/video2.png") no-repeat center/100% auto #001E20;
+}
+
 .reviews .videoList li {
   overflow: hidden;
   padding: 0;
@@ -3787,6 +3842,30 @@
   left: 0;
   width: 100%;
   height: 87%;
+}
+
+.reviews .videoList li .preview {
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 87%;
+  position: absolute;
+}
+
+.reviews .videoList li .preview:hover svg {
+  -webkit-transform: translateX(-50%) translateY(-50%) scale(1.1);
+          transform: translateX(-50%) translateY(-50%) scale(1.1);
+}
+
+.reviews .videoList li .preview svg {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translateX(-50%) translateY(-50%);
+          transform: translateX(-50%) translateY(-50%);
+  -webkit-transition: .3s;
+  transition: .3s;
 }
 
 .reviews .videoList li:nth-child(odd) {
@@ -3916,6 +3995,14 @@
   .reviews .videoList li iframe {
     width: 100%;
     height: 80%;
+  }
+  .reviews .videoList li .preview {
+    width: 100%;
+    height: 80%;
+  }
+  .reviews .videoList li .preview svg {
+    width: 45px;
+    height: 45px;
   }
   .reviews .videoList li .hashtag-nav {
     bottom: 10px;
