--- a/css/_whyUs.scss
+++ b/css/_whyUs.scss
@@ -43,6 +43,8 @@
 
 @media (max-width: 992px) {
     .whyUs {
+        background: none;
+
         .container {
             padding-top: 100px;
             padding-bottom: 100px;
