--- a/css/_buyNow.scss
+++ b/css/_buyNow.scss
@@ -3,8 +3,7 @@
     color: black;
 
     .container {
-        padding-top: 50px;
-        padding-bottom: 50px;
+        padding: 50px 0;
     }
 
     .content {
@@ -232,4 +231,13 @@
             max-width: 320px;
         }
     }
+}
+
+@media (max-width: 576px) {
+    .buyNow {
+        .container {
+            padding-right: 20px;
+            padding-left: 20px;
+        }
+    }   
 }
