--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -3,8 +3,7 @@
     color: #bdbdbd;
 
     .container {
-        padding-top: 28px;
-        padding-bottom: 50px;
+        padding: 28px 0 50px;
     }
 
     .d-flex {
@@ -256,6 +255,11 @@
     .footer {
         .info, .contacts, .footerNav {
             left: 0;
+        }
+
+        .container {
+            padding-left: 20px;
+            padding-right: 20px;
         }
     }
 }
