--- a/css/_questions.scss
+++ b/css/_questions.scss
@@ -2,8 +2,7 @@
     background: url("../assets/questionsBg.svg") no-repeat center / cover;
 
     .container {
-        padding-top: 100px;
-        padding-bottom: 100px;
+        padding: 100px 0;
     }
 
     .inside {
@@ -184,6 +183,15 @@
             top: 0;
             border-radius: 5px;
             margin-top: 30px;
+        }
+    }
+}
+
+@media (max-width: 576px) {
+    .questions {
+        .container {
+            padding-left: 20px;
+            padding-right: 20px;
         }
     }
 }
