--- a/css/style.css
+++ b/css/style.css
@@ -1064,9 +1064,6 @@
     padding-top: 10px;
     padding-bottom: 100px;
   }
-  .projects .header2:not(.name) {
-    padding-left: 15px;
-  }
   .projects .bigProjectsList {
     margin-top: 60px;
     width: 100%;
@@ -1962,8 +1959,7 @@
 }
 
 .premium .container {
-  padding-bottom: 250px;
-  padding-top: 100px;
+  padding: 100px 0 250px;
 }
 
 .premium .row {
@@ -2052,14 +2048,20 @@
   }
 }
 
+@media (max-width: 576px) {
+  .premium .container {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+}
+
 .buyNow {
   background: url("../assets/buyNowBg.svg") no-repeat center/cover;
   color: black;
 }
 
 .buyNow .container {
-  padding-top: 50px;
-  padding-bottom: 50px;
+  padding: 50px 0;
 }
 
 .buyNow .content {
@@ -2294,13 +2296,19 @@
   }
 }
 
+@media (max-width: 576px) {
+  .buyNow .container {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+}
+
 .whyUs {
   background: url("../assets/whyUsBg.svg") no-repeat center/auto 100%;
 }
 
 .whyUs .container {
-  padding-top: 70px;
-  padding-bottom: 150px;
+  padding: 70px 0 150px;
 }
 
 .whyUs .whyUsCard {
@@ -2315,6 +2323,7 @@
   color: #F2C94C;
   margin-bottom: 20px;
   line-height: 1.3;
+  padding: 0;
 }
 
 .whyUs .whyUsCard .header3 {
@@ -2349,7 +2358,7 @@
   .whyUs .whyUsCard {
     margin-top: 60px;
     width: 100%;
-    padding: 30px 20px 410px;
+    padding: 30px 20px 430px;
     background-position: 90% 185%;
     background-size: 100% auto;
   }
@@ -2370,7 +2379,14 @@
     margin-top: 60px;
     padding: 30px 20px 410px;
     background-position: 90% bottom;
-    background-size: auto 370px;
+    background-size: auto 385px;
+  }
+}
+
+@media (max-width: 576px) {
+  .whyUs .container {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
 
@@ -2425,7 +2441,11 @@
 }
 
 .about .container {
-  padding-top: 100px;
+  padding: 100px 0;
+}
+
+.about .header2 {
+  padding: 0;
 }
 
 .about .featuresList {
@@ -2556,7 +2576,6 @@
   .about .valuesList {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    padding: 0 20px;
     margin-top: 70px;
   }
   .about .valuesList li {
@@ -2675,8 +2694,7 @@
 }
 
 .reviews .container {
-  padding-top: 150px;
-  padding-bottom: 100px;
+  padding: 150px 0 100px;
 }
 
 .reviews ul {
@@ -2832,6 +2850,13 @@
   }
 }
 
+@media (max-width: 576px) {
+  .reviews .container {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+}
+
 @media (max-width: 345px) {
   .reviews .fullBtn p {
     font-size: 14px;
@@ -2846,8 +2871,7 @@
 }
 
 .questions .container {
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding: 100px 0;
 }
 
 .questions .inside {
@@ -3042,6 +3066,13 @@
   }
 }
 
+@media (max-width: 576px) {
+  .questions .container {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
 @media (min-width: 415px) and (max-width: 503px) {
   .questions .header2 {
     max-width: 240px;
@@ -3076,8 +3107,7 @@
 }
 
 .footer .container {
-  padding-top: 28px;
-  padding-bottom: 50px;
+  padding: 28px 0 50px;
 }
 
 .footer .d-flex {
@@ -3330,6 +3360,10 @@
 @media (max-width: 550px) {
   .footer .info, .footer .contacts, .footer .footerNav {
     left: 0;
+  }
+  .footer .container {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
 
