--- a/css/_questions.scss
+++ b/css/_questions.scss
@@ -49,7 +49,7 @@
         }
     }
 
-    input[type="text"] {
+    input[type="text"], input[type="tel"] {
         margin-bottom: 20px;
         width: 100%;
         border-radius: 5px;
