--- a/css/_pros.scss
+++ b/css/_pros.scss
@@ -30,8 +30,24 @@
         }
 
         .card-header {
-            padding-bottom: 50px;
+            padding: 0;
             border: none;
+        }
+
+        .card-body {
+            padding: 40px 0 20px 0;
+            position: relative;
+            line-height: 1.3;
+
+            &:before {
+                position: absolute;
+                content: "";
+                background-color: #e0e0e0;
+                top: 18px;
+                left: 0;
+                width: 100%;
+                height: 1px;
+            }
         }
 
         .btn-block {
@@ -70,14 +86,25 @@
                 &:not(:last-child) {
                     margin-bottom: 15px;
                 }
+            }
+        }
+    }
+}
 
-                .collapse {
-                    transition: .3s;
+@media (max-width: 768px) {
+    .pros {
+        .prosBlock {
+            flex-direction: column;
+
+            ul {
+                width: 100%;
+
+                &:first-child {
+                    margin-bottom: 20px;
                 }
 
-                p {
-                    height: 0;
-                    opacity: 0;
+                li {
+                    width: 100%;
                 }
             }
         }
